validator/kubernetes/02-validator_deploy.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutep2p
  namespace: lacchain-testnet
spec:
  entryPoints:
    - p2p
  routes:
  - kind: Rule
    match: HostSNI(`*`) 
    services:
    - kind: Service
      name: p2p
      namespace: lacchain-testnet
      port: 9870
---
apiVersion: v1
kind: Service
metadata:
  name: p2p
  namespace: lacchain-testnet
  labels:
    app: nodeos-boot
spec:
  ports:
    - port: 9870
      name: p2p
  selector:
    app: nodeos-boot
---
apiVersion: v1
kind: Service
metadata:
  name: nodeos-boot
  namespace: lacchain-testnet
  labels:
    app: nodeos-boot
spec:
  clusterIP: None
  selector:
    app: nodeos-boot
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nodeos-boot
  namespace: lacchain-testnet
  labels:
    app: nodeos-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeos-boot
  serviceName: nodeos-boot
  template:
    metadata:
      labels:
        app: nodeos-boot
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - nodeos-boot
            topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 600
      containers:
      - image: "${YOUR_REGISTRY}/eosio:v2.0.7-wt-0.0.2"
        name: nodeos-boot
        imagePullPolicy: Always
        command:
          - bash
          - -ec
          - |
            [...]
        ports:
          - containerPort: 9870
            protocol: TCP
            name: p2p
        readinessProbe:
          exec:
            command:
            - /tools/ready.sh
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
          - name: nodeos-data
            mountPath: /eos.data
          - name: nodeos-config
            mountPath: /eos.config
      volumes:
        - name: nodeos-config
          configMap:
            name: data-configmap
      imagePullSecrets:
        -  name: dockerhub-secret
  volumeClaimTemplates:
    - metadata:
        name: nodeos-data
        labels:
          app: nodeos-boot
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: rook-ceph-block-x2
        resources:
          requests:
            storage: "32Gi"
